# RAGit

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
catalog/: models.yaml
scripts/: make-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: catalog.rs  chat.rs  commands.rs  download.rs  engine.rs  hardware.rs  lib.rs  main.rs  team.rs
src-tauri/src/rag/: embed.rs  export.rs  indexer.rs  media.rs  mod.rs  parse.rs  store.rs  vector_db.rs  vision.rs
src/components/: Chat.tsx  ErrorBoundary.tsx  IndexSidebar.tsx  Indexing.tsx  Library.tsx  ModelHub.tsx  Settings.tsx  Sidebar.tsx  Team.tsx
src/components/ui/: FileList.tsx  LevelSelect.tsx  ProgressBar.tsx
src/lib/: ipc.ts
src/lib/ipc/: constants.ts  types.ts
src/state/: EngineContext.tsx  LibraryContext.tsx  SettingsContext.tsx  TeamContext.tsx
