[package]
name = "ragit"
version = "0.1.0"
description = "On-device RAG desktop app"
authors = ["RAGit contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ragit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"], default-features = false }
sha2 = "0.10"
dirs = "5"
zip = "2"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
base64 = "0.22"
quick-xml = "0.36"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
hex = "0.4"
sysinfo = "0.33"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
zvec-rust = "0.5.1"

[features]
